--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 
-<body>
+<body style="background-color: #de435c;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
